--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "esm"
   ],
   "author": "royalewcheese",
+  "repository": "nenorrell/markdown-stripper",
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
